# BaSSET

./: .gitignore  LICENCE  MANIFEST.in  pyproject.toml  readme.md
BaSSET/: BaSSET.py
BaSSET/utils/: analysis.py  fileWorker.py  funcs.py
basset/: BaSSET.py  main.py
basset/utils/: analysis.py  fileWorker.py  file_worker.py  funcs.py  gui_algorithms.py  gui_helper.py
results/260211-1702_NMF_4_xy/: summary.txt
tools/: sub_bkgfolder.py
