[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "BaSSET-UiO"
version = "1.2.0a"
dependencies = [
    "natsort",
    "numpy",
    "matplotlib",
    "PyQt6",
    "scikit-learn",
    "diffpy.stretched-nmf"
]
requires-python = ">=3.11"
authors = [{name="Eira Tiberg North", email="erlendtn@uio.no"}]
maintainers = [{name="Eira Tiberg North", email="erlendtn@uio.no"}]
description = "A GUI-based toolbox for signal selection of operando scattering experiments"
readme = "README.md"
keywords = ["PDF", "XRD", "operando", "GUI"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.scripts]
basset = "BaSSET.BaSSET:main"

[project.gui-scripts]
basset-gui = "BaSSET.BaSSET:main"

[tool.setuptools]
packages = ["BaSSET"]

[project.urls]
Repository = "https://github.com/etnorth/BaSSET"
Issues = "https://github.com/etnorth/BaSSET/issues"